<resources>
    <string name="app_name">My StoryApp</string>
    <string name="image_signup">image signup</string>
    <string name="title_signup_page">Complete your data below</string>
    <string name="name">Name</string>
    <string name="name_hint">Text your name</string>
    <string name="email">Email</string>
    <string name="min_length">Minimal Length %1$d characters</string>
    <string name="invalid_email">Format email is invalid!</string>
    <string name="email_hint">Text your email</string>
    <string name="message_validation">Enter your %1$s</string>
    <string name="password">Password</string>
    <string name="password_hint">Text your password</string>
    <string name="signup">Signup</string>
    <string name="signup_description">Already have an account ?</string>
    <string name="login">Login</string>
    <string name="copyright">© 2021 Dicoding</string>
    <string name="login_description">Don\'t have any account ?</string>
    <string name="login_error">Login failure, please try again!</string>
    <string name="signup_error">Signup failure, please try again!</string>
    <string name="add_story">Add Story</string>
    <string name="camera">Camera</string>
    <string name="gallery">Gallery</string>
    <string name="description_hint">Text your description</string>
    <string name="upload">Upload</string>
    <string name="permission_denied">Can\'t get permission</string>
    <string name="input_your_image">Please upload your image first!</string>
    <string name="choose_picture">Choose a Picture</string>
    <string name="avatar">Avatar</string>
    <string name="username">Username</string>
    <string name="description">Description</string>
    <string name="created_at">Created At</string>
    <string name="logout">Logout</string>
    <string name="setting">Setting</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="location">location</string>
    <string name="maps_error">Style parsing failed.</string>
    <string name="maps_nothing">\"Can\'t find style. Error: \"</string>
    <string name="my_location">Share Location</string>
    <string name="location_not_found">Location is not found. Try Again</string>
    <string name="retry">retry</string>
</resources>