<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/add_story"
        android:icon="@drawable/ic_add_circle"
        android:title="@string/add_story"
        app:showAsAction="always" />
    <item
        android:id="@+id/location"
        android:icon="@drawable/ic_location"
        android:title="@string/location"
        app:showAsAction="always" />
    <item
        android:id="@+id/logout"
        android:icon="@drawable/ic_power_settings"
        android:title="@string/logout"
        app:showAsAction="always" />
    <item
        android:id="@+id/setting"
        android:icon="@drawable/ic_settings"
        android:title="@string/setting"
        app:showAsAction="always" />

</menu>